# cgns-rs

./: .gitignore  Cargo.toml  base_test.cgns  base_test.cgns_bindings  desc_test.cgns_bindings  goto_test.cgns_bindings  iter_test.cgns_bindings  test.cgns  test.cgns_bindings
src/: base.rs  cgio.rs  errors.rs  file.rs  lib.rs  node.rs  open_modes.rs  types.rs  zone.rs
src/cgio/: mod.rs  types.rs
src/node_traits/: family.rs  iter.rs  mod.rs  named.rs  navigation.rs
src/nodes/: base.rs  descriptor.rs  file.rs  mod.rs  ordinal.rs  simulation_type.rs  zone.rs
src/nodes/base/: base.rs  mod.rs  simulation_type.rs
src/nodes/base/simulation_type/: mod.rs
src/nodes/base/zone/: mod.rs  zone.rs
src/nodes/location_independent/: descriptor.rs  mod.rs  ordinal.rs
tests/: basic.rs  static_assertions.rs
