[package]
name = "cgns"
version = "3.4.0"
authors = ["soruh <mail@soruh.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcgns-sys =  { version = "3.4.0", git = "https://github.com/soruh/cgns-sys" }

[dev-dependencies]
static_assertions = "1.1.0"


